tests/invalid-enum-member.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a name for a value in this enum.
// CHECK-NEXT:   2
// CHECK-NEXT:   ^

enum e {
  2
}
